speedtest-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  namespace: speedtest
  labels:
    app: speedtest
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: speedtest
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
