argocd-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "argocd-cert"
    networking.gke.io/v1beta1.FrontendConfig: "argocd-security-config"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: gce
  defaultBackend:
    service:
      name: argocd-server
      port:
        number: 80
